--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "smoke:test": "node scripts/smoke-test.js",
-    "test": "jest"
+    "test": "jest",
+    "render:migrate": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
